<resources>
    <string name="app_name">Spotiutils</string>
    <string name="title_login">Welcome!</string>
    <string name="msg_login">Please log in with your Spotify account to continue</string>
    <string name="msg_connection_dialog">Spotiutils may not work without an active internet connection</string>
    <string name="text_button_login">Log in</string>
    <string name="text_dismiss_button_connection_dialog">Dimiss</string>
    <string name="title_connection_dialog">No internet connection</string>
    <string name="error_token_request">Can\'t get token</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_overview">Overview</string>
    <string name="title_top">Top</string>
    <string name="title_profile">Profile</string>
    <string name="title_globle">Globle</string>
    <string name="title_last_played">Last played</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_more"><![CDATA[More>]]></string>
    <string name="title_recently_played">Recently Played</string>
    <string name="error">Error</string>
    <string name="error_json_exception">JSON Exception</string>
    <string name="_0_00">0:00</string>
    <string name="error_parse_exception">Parse Exception</string>
    <string name="image_recently_played_history">Image Recently Played History</string>
    <string name="error_data_last_played_track">Couldn\'t get last played track</string>
    <string name="error_refresh_token_expired">Refresh token expired</string>
    <string name="error_token_expired">Token Expired</string>
    <string name="error_recently_played_track">Couldn\'t get recently played track</string>
    <string name="error_playlists">Couldn\'t get playlists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_top_tracks">Couldn\'t get top tracks</string>
    <string name="title_user_info">User Info</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_country">Country</string>
    <string name="error_user_info">Couldn\'t get user info</string>
    <string name="_0_10">0-10</string>
    <string name="title_popularity">popularity</string>
    <string name="title_track_length">track length</string>
    <string name="title_album">Album</string>
    <string name="title_artist">Artist</string>
    <string name="title_more_track">More tracks</string>
    <string name="title_lyrics">Lyrics</string>
    <string name="nothing_to_show_here">Nothing to show here</string>
    <string name="title_audio_analysis">Audio analysis</string>
    <string name="title_key">Key</string>
    <string name="title_bpm">BPM</string>
    <string name="text_open_in_spotify">Open in Spotify</string>
    <string name="title_acoustic">Acoustic</string>
    <string name="title_lively">Lively</string>
    <string name="title_danceable">Danceable</string>
    <string name="title_energetic">Energetic</string>
    <string name="title_speechful">Speechful</string>
    <string name="title_instrumental">Instrumental</string>
    <string name="title_valence">Valence</string>
    <string name="title_audio_features">Audio features</string>
    <string name="favorite">Favorite</string>
    <string name="title_followers">followers</string>
    <string name="title_top_tracks">Top tracks</string>
    <string name="title_related_artists">Related artists</string>

</resources>