<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_overview"
        android:title="@string/title_overview"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_top"
        android:title="@string/title_top"
        android:icon="@drawable/ic_trending"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_globle"
        android:title="@string/title_globle"
        android:icon="@drawable/ic_globe"
        app:showAsAction="ifRoom"
        />
</menu>