<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primaryColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/appbar_fragment_profile"
        layout="@layout/appbar_fragment_profile"/>

    <TextView
        android:id="@+id/text_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_user_info"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_fragment_profile" />

    <TableLayout
        android:id="@+id/my_table_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/text_user_info"
        app:layout_constraintLeft_toLeftOf="parent"
        android:stretchColumns="1"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:paddingTop="@dimen/dp_6"
            android:paddingBottom="@dimen/dp_6">
            <TextView
                android:text="@string/text_username"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                />
            <TextView
                android:id="@+id/text_user_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:gravity="end"
                tools:text="Nguyen Tuan Anh"
                />
        </TableRow>

        <TableRow
            android:paddingTop="@dimen/dp_6"
            android:paddingBottom="@dimen/dp_6">
            <TextView
                android:text="@string/text_email"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                />
            <TextView
                android:id="@+id/text_user_email"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:gravity="end"
                tools:text="duongtien353@gmail.com"
                />
        </TableRow>

        <TableRow
            android:paddingTop="@dimen/dp_6"
            android:paddingBottom="@dimen/dp_6">
            <TextView
                android:text="@string/text_country"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                />

            <TextView
                android:id="@+id/text_user_country"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:gravity="end"
                tools:text="VN"
                />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/text_recently_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_recently_played"
        android:textSize="@dimen/sp_18"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/my_table_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_recently_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="@id/recyclerview_recently_played"
        app:layout_constraintBottom_toBottomOf="@id/recyclerview_recently_played"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_recently_played"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_16"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/text_recently_played"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="2"
        tools:listitem="@layout/item_recently_played"/>

</androidx.constraintlayout.widget.ConstraintLayout>