<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="?attr/colorPrimary" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_40"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:layout_centerHorizontal="true"
            android:text="@string/msg_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:gravity="center" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_button_login"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:backgroundTint="@color/colorAccent"
        android:paddingTop="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_16"
        app:cornerRadius="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/primaryColor"
        app:layout_constraintTop_toTopOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="@id/btn_login"/>
</androidx.constraintlayout.widget.ConstraintLayout>